crates/omega-types/tests/snapshots/events_reference__all_26_variants_reference.snap
---
source: crates/omega-types/tests/events_reference.rs
expression: events
---
[
  {
    "type": "session_started",
    "time": "2024-01-15T12:00:00.000Z",
    "sessionId": "sess_abc123",
    "path": ".omega/sessions/20240115_120000",
    "model": "claude-sonnet-4-6",
    "effort": "medium",
    "systemPrompt": "You are an expert assistant operating inside Omega, a software engineering agent harness.",
    "omegaCommit": "abc1234",
    "agentTimeZone": "Europe/Berlin",
    "origin": {
      "type": "root"
    }
  },
  {
    "type": "server_started",
    "time": "2024-01-15T12:00:00.000Z"
  },
  {
    "type": "server_stopped",
    "time": "2024-01-15T12:00:00.000Z",
    "outcome": "clean"
  },
  {
    "type": "user_message",
    "time": "2024-01-15T12:00:00.000Z",
    "content": "What files are in the current directory?"
  },
  {
    "type": "llm_call",
    "time": "2024-01-15T12:00:00.000Z",
    "url": "https://api.anthropic.com/v1/messages",
    "model": "claude-sonnet-4-6",
    "contextHashes": [
      "deadbeefcafe1234"
    ],
    "cacheBreakpointIndex": null,
    "requestBytes": 1234
  },
  {
    "type": "tool_call",
    "time": "2024-01-15T12:00:00.000Z",
    "toolCallId": "[id_1]",
    "name": "list_dir",
    "input": {
      "path": "."
    },
    "contextHash": "deadbeefcafe1234"
  },
  {
    "type": "tool_result",
    "time": "2024-01-15T12:00:00.000Z",
    "toolCallId": "[id_1]",
    "name": "list_dir",
    "isError": false,
    "durationMs": 8,
    "output": "README.md\nsrc/\ntests/"
  },
  {
    "type": "turn_end",
    "time": "2024-01-15T12:00:00.000Z",
    "metrics": {
      "inputTokens": 512,
      "outputTokens": 64,
      "cacheCreationTokens": 480
    }
  },
  {
    "type": "llm_error",
    "time": "2024-01-15T12:00:00.000Z",
    "url": "https://api.anthropic.com/v1/messages",
    "error": "HTTP 429: rate limit exceeded",
    "httpStatus": 429
  },
  {
    "type": "agent_error",
    "time": "2024-01-15T12:00:00.000Z",
    "error": "Tool execution failed: permission denied"
  },
  {
    "type": "turn_interrupted",
    "time": "2024-01-15T12:00:00.000Z",
    "reason": "aborted"
  },
  {
    "type": "llm_retry",
    "time": "2024-01-15T12:00:00.000Z",
    "attempt": 2,
    "httpStatus": 429,
    "waitMs": 5000,
    "error": "rate limited",
    "retryAt": "2024-01-15T12:00:00.000Z",
    "errorBody": {
      "type": "error",
      "error": {
        "type": "rate_limit_error",
        "message": "Too many requests"
      }
    },
    "reason": "retry-after"
  },
  {
    "type": "model_changed",
    "time": "2024-01-15T12:00:00.000Z",
    "model": "claude-opus-4-6"
  },
  {
    "type": "effort_changed",
    "time": "2024-01-15T12:00:00.000Z",
    "effort": "high"
  },
  {
    "type": "transport_error",
    "time": "2024-01-15T12:00:00.000Z",
    "error": "WebSocket connection closed unexpectedly",
    "context": "client 192.168.1.42"
  },
  {
    "type": "resuming_session",
    "time": "2024-01-15T12:00:00.000Z",
    "resumedFrom": "20240114_090000",
    "name": "prior session",
    "basis": "The agent fixed a bug in the parser."
  },
  {
    "type": "session_resumed",
    "time": "2024-01-15T12:00:00.000Z",
    "resumedFrom": "20240114_090000",
    "summary": "Fixed a bug in the parser module."
  },
  {
    "type": "pause_requested",
    "time": "2024-01-15T12:00:00.000Z"
  },
  {
    "type": "turn_paused",
    "time": "2024-01-15T12:00:00.000Z"
  },
  {
    "type": "turn_continued",
    "time": "2024-01-15T12:00:00.000Z",
    "mode": "manual"
  },
  {
    "type": "llm_response_started",
    "time": "2024-01-15T12:00:00.000Z"
  },
  {
    "type": "llm_response_ended",
    "time": "2024-01-15T12:00:00.000Z",
    "stopReason": "end_turn",
    "usage": {
      "input_tokens": 100,
      "output_tokens": 50,
      "iterations": [
        {
          "type": "compaction",
          "input_tokens": 80,
          "output_tokens": 0,
          "cache_creation_input_tokens": 40
        },
        {
          "type": "message",
          "input_tokens": 20,
          "output_tokens": 50,
          "cache_read_input_tokens": 40
        }
      ]
    },
    "contextHash": "deadbeefcafe1234"
  },
  {
    "type": "llm_response_discarded",
    "time": "2024-01-15T12:00:00.000Z"
  },
  {
    "type": "text_block",
    "time": "2024-01-15T12:00:00.000Z",
    "text": "Hello, world.",
    "partial": false
  },
  {
    "type": "thinking_block",
    "time": "2024-01-15T12:00:00.000Z",
    "thinking": "Let me check the directory.",
    "signature": "sig_ref_01",
    "partial": false
  },
  {
    "type": "tool_use_block",
    "time": "2024-01-15T12:00:00.000Z",
    "toolCallId": "[id_1]",
    "toolUseId": "[id_2]",
    "name": "list_dir",
    "input": {
      "path": "."
    },
    "partial": false
  }
]
